[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavetwin"
version = "0.1.0"
description = "Find duplicate audio files using acoustic fingerprinting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["audio", "duplicates", "fingerprinting", "music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]

[project.scripts]
wavetwin = "wavetwin.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/wavetwin"
Repository = "https://github.com/yourusername/wavetwin"
Issues = "https://github.com/yourusername/wavetwin/issues"